src/test/resources/syntax_errors/decl_two_types_same.notc
void main() {
    int int var;
}
